<resources>
    <string name="app_name">易阅者</string>
    <string name="title_activity_splash">易阅者</string>
    <string name="text_main">首页</string>
    <string name="text_global_settings">设置</string>
    <string name="text_global_notes">笔记</string>
    <string name="text_global_plan">计划</string>
    <string name="text_global_read">读书</string>
    <string name="text_global_logout">退出</string>
    <string name="empty_reading_title">没有文章</string>
    <string name="back">返回</string>
    <string name="empty_reading_hint">请使用工具栏最右边的按钮选择文章</string>
    <string name="text_null" />
</resources>
