<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/drawer_home"
            android:icon="@drawable/icon_home"
            android:title="@string/text_main" />

        <item
            android:id="@+id/drawer_Read"
            android:icon="@drawable/reading_badge"
            android:title="@string/text_global_read"
            />

        <item
            android:id="@+id/drawer_Note"
            android:icon="@drawable/notes_badge"
            android:title="@string/text_global_notes"
            />

        <item
            android:id="@+id/drawer_Plan"
            android:icon="@drawable/routines_badge"
            android:title="@string/text_global_plan"
            />

        <item
            android:id="@+id/drawer_settings"
            android:icon="@drawable/icon_settings"
            android:title="@string/text_global_settings" />

        <item
            android:id="@+id/drawer_logout"
            android:icon="@drawable/ic_power_settings_new_white_48dp"
            android:title="@string/text_global_logout" />

    </group>
</menu>